--- a/Lab02-Desenv-Software/implementação/backEnd/car_rental_system/src/main/resources/application.properties
+++ b/Lab02-Desenv-Software/implementação/backEnd/car_rental_system/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=car_rental_system
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/seu_banco_de_dados
-spring.datasource.username=admin
-spring.datasource.password=admin
+spring.datasource.url=jdbc:postgresql://localhost:5432/labNoite
+spring.datasource.username=postgres
+spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
